syntsx of site page updated

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ url: ''
 baseurl: null
 title: Priyanshu Chandel
 description: Hello, I'm Priyanshu Chandel
-site-image: -
+site-image: >-
   /assets/images/logo.png
 site-keywords: 'Priyanshu, chandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github'
 favicon-url: null
