Instagram link update

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ heroimage: >-
 email: chandelpriyanshu8@outlook.com
 facebook_username: priyanshu.pr
 twitter_username: PRIYANSHUCHAN
-instagram_username: thedevslot
+instagram_username: /
 linkedin_username: prianshuchandel
 github_username: PriyanshuChandel
 youtube_channel_id: UCYNfy-K2fuNVW8ydTDmvqmA
