base_url update

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: kramdown
 url: ''
-baseurl: null
+baseurl: /PriyanshuChandel
 title: Priyanshu Chandel
 description: Hello, I'm Priyanshu Chandel
 site-image: >-
