--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /PriyanshuChandel
 title: Priyanshu Chandel
 description: Hello, I'm Priyanshu Chandel
 site-image: >-
-  assets/images/self.jpg
+  /assets/images/self.jpg
 site-keywords: 'Priyanshu, chandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github'
 favicon-url: null
 heroimage: >-
