site-keywords updated

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Priyanshu Chandel
 description: Hello, I'm Priyanshu Chandel
 site-image: >-
   /assets/images/logo.png
-site-keywords: 'Priyanshu, chandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github'
+site-keywords: 'Priyanshu, chandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
   https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
