Site keywords and description updated

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ markdown: kramdown
 url: ''
 baseurl: null
 title: Priyanshu Chandel
-description: Hello, I'm Priyanshu Chandel
+description: Imaginative and curious about coading
 site-image: >-
   /assets/images/logo.png
-site-keywords: 'Priyanshu, chandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
+site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
   https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
