contact.html update and config file updated

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ markdown: kramdown
 url: ''
 baseurl: null
 title: Priyanshu Chandel
+contact: +918285775109
 description: Imaginative and curious about coading
 site-image: >-
   /assets/images/logo.png
@@ -19,9 +20,9 @@ youtube_channel_id: UCYNfy-K2fuNVW8ydTDmvqmA
 reddit_username: /
 behance_username: /
 dribbble_username: /
-spotify_username: /
+spotify_username: 313nzk5zhcqygple35neaaqqh3qe?si=13d008570b144b07
 google-analytics: UA-163806439-1
-disqus-shortname: thedevslot
+disqus-shortname: /
 author-name: Priyanshu Chandel
 author-image: >-
   /assets/images/self.jpg
