Hero image file updated in config file and image added in assets folder

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-image: >-
 site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
-  https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+  /assets/images/hero.jpg
 email: chandelpriyanshu8@outlook.com
 facebook_username: priyanshu.pr
 twitter_username: PRIYANSHUCHAN
