Nacbar html file updated for source of image config file updated to add variable of navbar image

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ contact: +918285775109
 description: Imaginative and curious about coading
 site-image: >-
   /assets/images/logo.png
+navbar-image: >-
+  /assets/images/site-logo.png  
 site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
