showcase-image added in config file and same is added in showcase.html

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,9 @@ description: Imaginative and curious about coading
 site-image: >-
   /assets/images/logo.png
 navbar-image: >-
-  /assets/images/site-logo.png  
+  /assets/images/site-logo.png
+showcase-image: >-
+  /assets/images/logo.png   
 site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
