project link updated

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - name: WebSite Directory
   image: /assets/images/project-1.png
-  link: https://PriyanshuChandel.github.io/
+  link: https://priyanshuchandel.github.io/WebDirectory/
   description: Personal WebSite Directory
 
 - name: Python3 Practice Exercise
