About author updated

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,11 @@ author-name: Priyanshu Chandel
 author-image: >-
   /assets/images/self.jpg
 author-about: >-
-  I am a enthusiastic coder with a passion for Python programming. I'm proficient in Python and learning HTML, CSS and JS. I started a YouTube channel where I'll post videos related to technology/computer/coding. For additional details, feel free to reach out to me through email or social media.
+  Hi there! My name is Priyanshu Chandel and I am a skilled individual with a strong foundation in Python programming. I am constantly seeking new opportunities to expand my knowledge and skills, which is why I have decided to dive into the world of web development by learning HTML, CSS, and JavaScript.
+
+With my intermediate level of Python knowledge, I am well equipped to tackle the challenges of web development. My goal is to combine my programming skills with my growing knowledge of HTML, CSS, and JavaScript to create stunning and functional websites.
+
+I am passionate about using technology to solve problems and make a difference in the world. This drive, combined with my strong work ethic, makes me a dedicated and reliable individual who is always striving to improve and achieve success. For additional details, feel free to reach out to me through email or social media.
 author-url: 'https://github.com/PriyanshuChandel'
 sass:
   sass_dir: _sass
