google analytics updated

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ reddit_username: /
 behance_username: /
 dribbble_username: /
 spotify_username: 313nzk5zhcqygple35neaaqqh3qe?si=13d008570b144b07
-google-analytics: UA-163806439-1
+google-analytics: G-JX7T5Z8SZ9
 disqus-shortname: /
 author-name: Priyanshu Chandel
 author-image: >-
