site keywords updated

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ navbar-image: >-
   /assets/images/site-logo.png
 showcase-image: >-
   /assets/images/logo.png   
-site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, Priyanshu github, Priyanshu'
+site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, priyanshuchandel github, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
   /assets/images/hero.jpg
