--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ behance_username: /
 dribbble_username: /
 spotify_username: 313nzk5zhcqygple35neaaqqh3qe?si=13d008570b144b07
 google-analytics: G-JX7T5Z8SZ9
+chatbot-pageid: 111048631902429
 disqus-shortname: /
 author-name: Priyanshu Chandel
 author-image: >-
