--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Priyanshu Chandel
 contact: +918285775109
 description: Imaginative and curious about coading
 site-image: >-
-  /assets/images/site-logo.png
+  /assets/images/favicon.ico
 navbar-image: >-
   /assets/images/site-logo.png
 showcase-image: >-
