--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ showcase-image: >-
 site-keywords: 'Priyanshu, chandel, PriyanshuChandel, Priyanshu chandel, Priyanshu Kumar, Priyanshu youtube, priyanshuchandel github, Priyanshu github, Priyanshu'
 favicon-url: null
 heroimage: >-
-  /assets/images/hero.jpg
+  /assets/images/hero.gif
 email: chandelpriyanshu8@outlook.com
 facebook_username: priyanshu.pr
 twitter_username: PRIYANSHUCHAN
