--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,4 +6,4 @@
 - name: Python3 Practice Exercise
   link: https://github.com/PriyanshuChandel/Python_Beginner_Exercises
   image: /assets/images/project-2.png
-  description: Pyrhon3 practice exercises for beginner
+  description: Python3 practice exercises for beginner
