--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 markdown: kramdown
-url: ''
-baseurl: ''
+url: https://priyanshuchandel.github.io
+baseurl: 
 title: Priyanshu Chandel 
 contact: +918285775109
 description: Imaginative and curious about coading
