telegram added in contact

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ twitter_username: PRIYANSHUCHAN
 instagram_username: /
 linkedin_username: prianshuchandel
 github_username: PriyanshuChandel
+telegram_username: priyanshuchandel8
 youtube_channel_id: UCYNfy-K2fuNVW8ydTDmvqmA
 reddit_username: /
 behance_username: /
