linkedin username corrected

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: chandelpriyanshu8@outlook.com
 facebook_username: priyanshu.pr
 twitter_username: PRIYANSHUCHAN
 instagram_username: /
-linkedin_username: prianshuchandel
+linkedin_username: priyanshuchandel
 github_username: PriyanshuChandel
 telegram_username: priyanshuchandel8
 youtube_channel_id: UCYNfy-K2fuNVW8ydTDmvqmA
