facebook profile changes to facebook page

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ favicon-url: null
 heroimage: >-
   /assets/images/hero.gif
 email: chandelpriyanshu8@outlook.com
-facebook_username: priyanshu.pr
+facebook_username: priyanshuchandel88
 twitter_username: PRIYANSHUCHAN
 instagram_username: /
 linkedin_username: priyanshuchandel
