--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -66,4 +66,4 @@
 - name: FontAwesome Reference
   link: https://priyanshuchandel.github.io/FontAwesome/
   image: /assets/images/project-14.png
-  description: This ia reference html for fontAwesome.
+  description: This is a reference html for fontAwesome.
